--- a/src/components/ItemListContainer/ItemList/Item/ItemCount/ItemCount.css
+++ b/src/components/ItemListContainer/ItemList/Item/ItemCount/ItemCount.css
@@ -9,11 +9,12 @@
   align-items: center;
   justify-content: space-between;
   width: fit-content;
-  height: 200px;
   border: 2px solid #e6e6e6;
   border-radius: 10px;
   padding: 20px;
   margin: 0 auto;
+  gap: 20px;
+  width: 100%;
 }
 .contenedorItem__titulo {
   font-size: 1.5rem;
@@ -46,4 +47,6 @@
   border: none;
   border-radius: 2px;
   text-transform: uppercase;
+  text-decoration: none;
+  text-align: center;
 }
